# Roman2Arab

./: CMakeLists.txt  Func.h  README.md  Roman2Arab.cpp  Roman2Arab.h  main.cpp
